2.9 / <not released yet>

 - New
   - Add possibility of specifying an interface for database queries by using
     its alias instead of system provided interface name (vnstat and vnstati)
   - Image output file extension allows selecting the used image file format
     as long as the used LibGD supports it, PNG is no longer the only option
   - Add configuration option HourlyGraphMode for changing the output mode
     of the graph, 0 = 24 hour sliding window (default, as in previous
     releases), 1 = graph begins from midnight
   - Add mode parameter for -hg / --hoursgraph options for overriding the
     HourlyGraphMode configuration option setting from the command line
   - Add vertical line to image output hourly graph to visualize midnight


2.8 / 4-Sep-2021

 - Fixed
   - Using a combination of --live and --json wasn't flushing stdout after
     each line resulting in buffered output if the output was being piped
   - Image output would fail to show the last line bar graph in list outputs
     if EstimateStyle was 0, BarColumnShowsRate was 1 and the last line had a
     higher traffic rate than other lines
   - Image output didn't correctly horizontally align the "no data available"
     message in 5 minute graph depending on the width of the image
   - Image output related configuration warnings could get shown when image
     output wasn't being used
   - Warnings of mismatches between image output and data retention
     configuration didn't provide relevant details for solving the issues
   - BandwidthDetection was being used for tun interfaces even when the
     Linux kernel had the information hardcoded to 10 Mbit regardless of the
     used real interface, interface specific MaxBW will now be used instead
     or MaxBandwidth as fallback
   - Configured interface specific MaxBW values were getting overridden by
     BandwidthDetection when something could be detected
   - Image output horizontal rx/tx bars often had one pixel too much width in