@@ -65,6 +65,13 @@ ListMonths     12
 ListYears       0
 ListTop        10
 
+# how to match interface given for query to interface in database
+# 0 = case sensitive exact match to interface name
+# 1 = method 0 followed by case sensitive exact match of alias
+# 2 = method 1 followed by case insensitive exact match of alias
+# 3 = method 2 followed by case insensitive beginning match of alias
+InterfaceMatchMethod 3
+
 
 # vnstatd
 ##
