@@ -213,7 +213,9 @@ and apply actions to only it. For database queries, it is possible to merge the
 information of two or more interfaces using the
 .I interface1+interface2+...
 syntax. All provided interfaces must be unique and must exist in the database
-when the merge syntax is used. Optionally,
+when the merge syntax is used. Optionally, depending on the
+.B InterfaceMatchMethod
+configuration setting,
 .I interface
 can be replaced with
 .I alias
