@@ -77,6 +77,20 @@ visible in the system. If no database can be read then the first available
 interface will be used. (vnstat and vnstati only)
 
 .TP
+.B InterfaceMatchMethod
+Method for matching interface given for a query to an interface in the
+database. Method 0 requires the interface name to be an case sensitive exact
+match. Method 1 extends the previous method by allowing a case sensitive
+exact match of the interface alias. Method 2 extends the previous method
+by allowing a case insensitive exact match of the interface alias. Method
+3 extends the previous method by allowing a case insensitive match of the
+beginning of the interface alias. Methods will be evaluated in the order
+described above resulting in exact interface matches always taking precedence.
+If any interface alias matching method results in multiple matches then
+the interface with the highest total traffic will be used.
+(vnstat and vnstati only)
+
+.TP
 .B "List5Mins, ListHours, ListDays, ListMonths, ListYears, ListTop"
 Number of entries to show in list outputs unless overridden from the command line.
 Set to 0 to show all entries available in the database.
