@@ -779,11 +779,21 @@ void handleshowdata(PARAMS *p)
 
 void showoneinterface(PARAMS *p)
 {
+	int i, found = 0;
+
 	if (!db_getinterfacecountbyname(p->interface)) {
 		if (strchr(p->interface, '+') == NULL) {
-			// TODO: show warning if match isn't unique
-			if (!db_setinterfacebyalias(p->interface, p->interface, 1)) {
-				printf("Error: Interface or alias \"%s\" not found in database.\n", p->interface);
+			for (i = 1; i <= cfg.ifacematchmethod; i++) {
+				found = db_setinterfacebyalias(p->interface, p->interface, i);
+				if (found) {
+					if (debug) {
+						printf("Found \"%s\" with method %d\n", p->interface, i);
+					}
+					break;
+				}
+			}
+			if (!found) {
+				printf("Error: No interface matching \"%s\" found in database.\n", p->interface);
 				exit(EXIT_FAILURE);
 			}
 		} else {
